# experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aud-mod-af.c  avl_tree.cxx  bin1s2dec.c  bitmacros.rs  branchpred-bench.c  calculator.c  caps-blink.c  crash_clang.c  exp-pars-quad.py  fb2P6.py  full-line.c  gen_bench.hxx  harmonics.c  raw-nostd.c  revserver.c  shell.c  tetris.py  xor_encdec.go
archive/: bs.cxx  cflags  mandelbrot.c  sphere.glsl  test.s
archive/c/: mandelbrot.c  mq  mq.c  randwalk.c
archive/py/: car-race.py  term.py  win.py
archive/py/colors-py/: chaos-img.py  complex-plot.py  fn-img-gen.py  mand.py  png2ascii.py  random-walk.py  term-col.py
archive/py/compiler/: __init__.py  parser.py  test.rb
archive/py/mand/: mand.c  mand.h  png-mand.py
max-led-driver/: max7221.h  raspi_led_spi.c
stackful-coro/: coroutine.c  coroutine.h
tetris/: tetris.py
